--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -12,9 +12,4 @@ jobs:
 
       - name: Build Cloud Foundry CLI
         run: |
-          apt-get update -y
-          apt-get install -y wget gnupg2
-          wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | apt-key add -
-          echo "deb https://packages.cloudfoundry.org/debian stable main" | tee /etc/apt/sources.list.d/cloudfoundry-cli.list
-          apt-get update -y 
-          apt-get install cf-cli -y
+          echo "Hello, world"
