--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build Cloud Foundry CLI
-        run: |
-          echo "Hello, world"
+      - name: Build R image on CloudFoundry
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: user/app:latest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
