--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -4,8 +4,15 @@ on:
   workflow_dispatch:
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      uses: actions/checkout@v2
+      run: echo "Workflow started"
+
   build:
     runs-on: ubuntu-latest
+    needs: echo
 
     steps:
       - uses: actions/checkout@v2
