Working on workflow format

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -7,18 +7,22 @@ on:
 
 jobs:
   echo:
+    name: Simple Echo
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Simple Echo
-      - run: echo "Workflow started"
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Echo
+        run: echo "Workflow started"
 
   build:
     runs-on: ubuntu-latest
     needs: echo
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
       - name: Build R image on CloudFoundry
         id: docker_build
@@ -26,5 +30,6 @@ jobs:
         with:
           push: true
           tags: user/app:latest
+          
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
