--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,9 +1,6 @@
 name: Cloud-gov Local Build
 
-on:
-  push:
-    paths:
-      - "**Dockerfile**"
+on: push
 
 jobs:
   echo:
@@ -30,6 +27,6 @@ jobs:
         with:
           push: true
           tags: user/app:latest
-          
+
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
