--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -22,9 +22,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          tag_with_ref: true
+        run: docker build
