--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Push to GitHub Packages
-        run: docker build
+        run: docker build .
