--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -10,5 +10,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Push to GitHub Packages
+      - name: Build Docker Image with cflocal installed
         run: docker build .
+
+  stage:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Stage R Shiny app
+        run: cf local stage -b https://github.com/cloudfoundry/r-buildpack
