--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up coud foundry CLI and cflocal
-        run: build.sh
+        run: ./build.sh
 
   stage:
     runs-on: ubuntu-latest
