--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Make build.sh executable
+        run: chmod +x ./build.sh
+
       - name: Set up coud foundry CLI and cflocal
         run: ./build.sh
 
