--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -21,4 +21,4 @@ jobs:
         run: cf --version
 
       - name: Stage R Shiny app
-        run: cf7 local stage -b https://github.com/cloudfoundry/r-buildpack
+        run: ./cf local stage -b https://github.com/cloudfoundry/r-buildpack
