adding check to list plugins

--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -17,8 +17,8 @@ jobs:
         run: sudo ./build.sh
         shell: bash
 
-      - name: Check cf version
-        run: cf --version
+      - name: Check that the plugin is recognized
+        run: cf plugins
 
       - name: Stage R Shiny app
-        run: ./cf local stage -b https://github.com/cloudfoundry/r-buildpack
+        run: cf local stage -b https://github.com/cloudfoundry/r-buildpack
