--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -28,4 +28,4 @@ jobs:
         run: cf plugins
 
       - name: Stage R Shiny app
-        run: cf local stage -b https://github.com/cloudfoundry/r-buildpack
+        run: cf local stage nars-dataextr -b https://github.com/cloudfoundry/r-buildpack
