Push image to Google package

--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -28,4 +28,11 @@ jobs:
         run: cf plugins
 
       - name: Stage R Shiny app
-        run: cf local stage nars-dataextr -b https://github.com/cloudfoundry/r-buildpack -p $GITHUB_WORKSPACE/docker
+        run: cf local stage nars-dataextr -b https://github.com/cloudfoundry/r-buildpack
+
+     -  name: Echo settings
+        run: echo docker.pkg.github.com/$GITHUB_REPOSITORY/nars-dataextr:$GITHUB_RUN_ID
+
+      - name: Push Docker image
+        id: docker_push
+        run: docker push docker.pkg.github.com/$GITHUB_REPOSITORY/nars-dataextr:$GITHUB_RUN_ID
