--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -45,7 +45,7 @@ jobs:
         run: docker images
 
       - name: Login to GitHub packages
-        uses: uses: docker/login-action@v1
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
