--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -1,6 +1,6 @@
 name: Cloud-gov Local Build
 
-on: push
+on: workflow_dispatch
 
 jobs:
   build:
@@ -35,8 +35,11 @@ jobs:
       #   with:
       #     path: nars-dataextr.droplet
 
+      - name: Generate tag for Docker image
+        run: echo "ghcr.io/${{ github.repository }}/nars-dataextr:${{ github.run_id }}" | tr '[:upper:]' '[:lower:]' >> ${{ docker_tagname }}
+
       - name: Export droplet as Docker image
-        run: cf local export nars-dataextr -r docker.pkg.github.com/testorg-2020/test_eforms_nars/nars-dataextr:${{ github.run_id }}
+        run: cf local export nars-dataextr -r ${{ docker_tagname }}
 
       - name: Show Files in GitHub Workspace
         run: ls -R ${{ github.workspace }}
@@ -51,6 +54,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Docker image
+      - name: Push Docker image to GitHub Container Registry
         shell: bash
-        run: docker push docker.pkg.github.com/testorg-2020/test_eforms_nars/nars-dataextr:${{ github.run_id }}
+        run: docker push ${{ docker_tagname }}
