--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -18,5 +18,5 @@ jobs:
         env:
           docker_tagname: ""
 
-      - name: Print new environment variable
-        run: echo ${{ docker_tagname }}
+      # - name: Print new environment variable
+      #   run: echo ${{ docker_tagname }}
