--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -14,7 +14,7 @@ jobs:
           f = open(os.environ["GITHUB_WORKSPACE"] + "/local.yml", "r")
           for line in f.readlines():
             if line.startswith("- name:"):
-              os.environ["DOCKER_TAGNAME"] = line.split(":")[1].strip())
+              os.environ["DOCKER_TAGNAME"] = line.split(":")[1].strip()
         env:
           docker_tagname: ""
 
