adding os.path.join

--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -11,7 +11,7 @@ jobs:
         shell: python
         run: |
           import os
-          f = open(os.environ["GITHUB_WORKSPACE"] + "/local.yml", "r")
+          f = open(os.path.join(os.environ["GITHUB_WORKSPACE"], "local.yml"), "r")
           for line in f.readlines():
             if line.startswith("- name:"):
               os.environ["DOCKER_TAGNAME"] = line.split(":")[1].strip()
