changing env reference

--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -26,4 +26,4 @@ jobs:
           f.close()
 
       - name: Print new environment variable
-        run: echo ${{ APP_NAME }}
+        run: echo $APP_NAME
