--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cat local.yml | while read -r line;
           do if [[ $line = *name:* ]]; then
-          echo 'app_name=echo "$line" | cut -d ":" -f 2 | xargs';
+          echo app_name=echo "$line" | cut -d ":" -f 2 | xargs;
           fi;
           done >> $GITHUB_ENV
 
