--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -30,14 +30,17 @@ jobs:
       - name: Print new environment variable
         run: echo $APP_NAME
 
-      - name: Bash script to update
-        shell: bash
-        run: |
-          cat local.yml | while read -r line;
-          do if [[ $line = *name:* ]]; then
-          echo app_name="$line" | cut -d ":" -f 2 | xargs;
-          fi;
-          done >> $GITHUB_ENV
+      # - name: Bash script to update
+      #   shell: bash
+      #   run: |
+      #     cat local.yml | while read -r line;
+      #     do if [[ $line = *name:* ]]; then
+      #     echo app_name="$line" | cut -d ":" -f 2 | xargs;
+      #     fi;
+      #     done >> $GITHUB_ENV
+
+      - name: Bash calling python
+        run: python ./github/get_app_name.py >> $GITHUB_ENV
 
       - name: Print new environment variable
         run: echo ${{ env.app_name }}
