Trying to reduce image size

--- a/.github/workflows/cflocal.yml
+++ b/.github/workflows/cflocal.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo ${{ env.app_name }}
 
       - name: Get docker tag
-        run: echo 'print("docker_tag=ghcr.io/" + "${{ github.repository }}".lower() + "/" + "${{ env.app_name }}" + ":" + "latest")' | python >> $GITHUB_ENV
+        run: echo 'print("docker_tag=ghcr.io/" + "${{ github.repository }}".lower() + "/" + "${{ env.app_name }}" + ":" + "${{ github.run_id }}")' | python >> $GITHUB_ENV
 
       - name: Print docker tag
         run: echo ${{ env.docker_tag }}
@@ -59,7 +59,7 @@ jobs:
       - name: List Docker images
         run: docker images
 
-      - name: Login to GitHub packages
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
